package main.java.com.team1.dao;

public class CustomerDAO {
}
