@startuml
class DataAccessObject<T> {
    +salvar(T entidade)
    +atualizar(T entidade)
    +deletar(T entidade)
    +buscarPorId(String id) T
    +listarTodos() List<T>
}
class VehicleDAO
class AgencyDAO
class CustomerDAO
class RentalDAO
class VehicleService {
    +addVehicle(Vehicle vehicle)
    +getAllVehicles()
    +searchVehicleByName(String name)
    +getVehicleByPage(int pageNumber)
}
class AgencyService {
    +addAgency(Agency agency)
    +getAllAgencies()
    +searchAgencyByName(String name)
    +getAgencyByPage(int pageNumber)
}
class CustomerService {
    +addCustomer(Customer customer)
    +getAllCustomers()
    +searchCustomerByName(String name)
    +getCustomerByPage(int pageNumber)
}
class RentalService {
    +addRental(Rental rental)
    +getAllRentals()
    +searchRentalByName(String name)
    +getRentalByPage(int pageNumber)
}

DataAccessObject <|.. VehicleDAO
DataAccessObject <|.. AgencyDAO
DataAccessObject <|.. CustomerDAO
DataAccessObject <|.. RentalDAO

note "Os veículos não podem ser repetidos." as N1
VehicleDAO .. N1

note "Agências não podem estar duplicadas." as N2
AgencyDAO .. N2

note "Clientes não podem estar duplicados." as N3
CustomerDAO .. N3

note "Os aluguéis e devoluções terão o local, data e horario." as N4
RentalDAO .. N4
@enduml
